# memrise

./: .gitconfig  .gitignore  README.md  __main__.py  pycheck.py  pyproject.toml  schema.py  setup.py  tox.ini  version1.py  version2.py  version3.py
.github/workflows/: codecov.yml  require.txt  test.yml
PyMemAPI/: PyMemAPI.py  __init__.py  schema.py
PyMemAPI/exception/: __init__.py  exception.py
PyMemAPI/schema/: __init__.py  schema.py
PyMemAPI/text2speech/: __init__.py  text2speech.py
audio/VWJulie/: HeForgotToHandInHisEssay.txt  ShePointedOutASillyMistakeIHadMade.txt  SheStudiedAllNightForHerChemistryFinal.txt  ThatSYourEndOfYearProject.txt  WeWorkedForHoursOnOurMathAssignment.txt
audio/VWPaul/: HeForgotToHandInHisEssay.txt  ShePointedOutASillyMistakeIHadMade.txt  SheStudiedAllNightForHerChemistryFinal.txt  ThatSYourEndOfYearProject.txt  WeWorkedForHoursOnOurMathAssignment.txt
course/: course.db
examples/: version1.py  version2.py  version3.py
stubs/requests/: __init__.pyi
stubs/requests/exceptions/: __init__.pyi
stubs/text2ipa/: __init__.pyi
tests/: conftest.py  test_PyMemAPI.py  testconf.py
