[tool.poetry]
name = "PyMemAPI"
version = "0.1.0rc0"
description = "Memrise API"
authors = ["Joseph Quang <tquangsdh20@fsob.win>"]
readme = "README.md"
repository = "https://github.com/josephquang97/memrise"
license = "Apache 2.0"
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

packages = [
    { include = "PyMemAPI" },
    { include = "PyMemAPI/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6"
googletrans = "4.0.0rc1"
memrise = "^1.3.0"
pydantic = "^1.9.0"
pyttsx3 = "^2.90"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
tox = "^3.24.5"
pytest-cov = "^3.0.0"
mypy = "^0.931"

[tool.pytest.ini_options]
addopts = "--cov=PyMemAPI"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
mypy_path = "stubs"
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
ignore_missing_imports = true
